--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -6,11 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YelpCamp</title>
+    <style>
+        a {
+            text-decoration: none;
+            color: purple;
+        }
+    </style>
 </head>
 
 <body>
     <h1>YelpCamp</h1>
     <p><i>A Full-Stack Project inspired from Colt Steele's The Web Developer Bootcamp on Udemy.</i></p>
+    <p>Check out our new campgrounds at <button><a href="/campgrounds"><b>/campgrounds</b></a></button></p>
 </body>
 
 </html>
