--- a/views/PageNotFound.ejs
+++ b/views/PageNotFound.ejs
@@ -17,7 +17,7 @@
 <body>
     <h1>Page Not Found</h1>
     <p>I don't know that path.</p>
-    <button><a href="/"><b>Go Home</b></a></button>
+    <button><a href="/campgrounds"><b>Go Back</b></a></button>
 </body>
 
 </html>
