--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -33,6 +33,7 @@
         Description : <%= (campground.description) ? campground.description : "None" %>
     </p>
     <button><a href="/campgrounds"><b>Go Back</b></a></button>
+    <button><a href="/campgrounds/<%=campground._id%>/edit"><b>Edit</b></a></button>
 </body>
 
 </html>
