--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -34,6 +34,7 @@
     </p>
     <button><a href="/campgrounds"><b>Go Back</b></a></button>
     <button><a href="/campgrounds/<%=campground._id%>/edit"><b>Edit</b></a></button>
+    <button><a href="/campgrounds/<%=campground._id%>/remove"><b>Delete</b></a></button>
 </body>
 
 </html>
