--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YelpCamp</title>
-    <style>
-        a {
-            text-decoration: none;
-            color: purple;
-        }
-    </style>
-</head>
-
-<body>
+<% layout('/layouts/BoilerPlate') %>
     <h1>YelpCamp</h1>
     <p><i>A Full-Stack Project inspired from Colt Steele's The Web Developer Bootcamp on Udemy.</i></p>
     <p>Check out our new campgrounds at <button><a href="/campgrounds"><b>/campgrounds</b></a></button></p>
-</body>
-
-</html>
