--- a/views/PageNotFound.ejs
+++ b/views/PageNotFound.ejs
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
-    <style>
-        a {
-            text-decoration: none;
-            color: purple;
-        }
-    </style>
-</head>
-
-<body>
+<% layout('/layouts/BoilerPlate') %>
     <h1>Page Not Found</h1>
     <p>I don't know that path.</p>
     <button><a href="/campgrounds"><b>Go Back</b></a></button>
-</body>
-
-</html>
