--- a/views/campgrounds/Edit.ejs
+++ b/views/campgrounds/Edit.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta title="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit</title>
-    <style>
-        a {
-            color: purple;
-            text-decoration: none;
-        }
-    </style>
-</head>
-
-<body>
+<% layout('/layouts/BoilerPlate') %>
     <h1>Edit a campground</h1>
     <p>
         <%= error %>
@@ -36,6 +20,3 @@
     </form>
     <br>
     <button><a href="/campgrounds"><b>Go Back</b></a></button>
-</body>
-
-</html>
