--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <style>
-        a {
-            color: purple;
-            text-decoration: none;
-        }
-    </style>
-</head>
-
-<body>
+<% layout('/layouts/BoilerPlate') %>
     <h1>All Campgrounds</h1>
     <% if(!error) { %>
         <button><a href="/"><b>Go Home</b></a></button>
@@ -54,6 +38,3 @@
             <button><a href="/"><b>Go Home</b></a></button>
             <button><a href="/campgrounds/new"><b>New</b></a></button>
             <% } %>
-</body>
-
-</html>
