--- a/views/campgrounds/Remove.ejs
+++ b/views/campgrounds/Remove.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remove</title>
-    <style>
-        a {
-            color: purple;
-            text-decoration: none;
-        }
-    </style>
-</head>
-
-<body>
+<% layout('/layouts/BoilerPlate') %>
     <h1>Remove a campground</h1>
     <form action="/campgrounds?_method=DELETE" method="post">
         <label for="id">Registration Id : </label>
@@ -36,6 +20,3 @@
     </form>
     <br>
     <button><a href="/campgrounds"><b>Go Back</b></a></button>
-</body>
-
-</html>
