--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -1,22 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%=campground.title%>
-    </title>
-    <style>
-        a {
-            color: purple;
-            text-decoration: none;
-        }
-    </style>
-</head>
-
-<body>
+<% layout('/layouts/BoilerPlate') %>
     <h1>
         <%=campground.title%>
     </h1>
@@ -35,6 +17,3 @@
     <button><a href="/campgrounds"><b>Go Back</b></a></button>
     <button><a href="/campgrounds/<%=campground._id%>/edit"><b>Edit</b></a></button>
     <button><a href="/campgrounds/<%=campground._id%>/remove"><b>Delete</b></a></button>
-</body>
-
-</html>
