--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -5,6 +5,10 @@
     <p>
         Registrarion Id : <%=campground._id %>
     </p>
+    <div>
+        <img src="<%=campground.imageURL%>" alt="Campground Image" width="400px" height="300px">
+    </div>
+    <br>
     <p>
         Price : Rs. <%=campground.price %>/-
     </p>
