--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -1,4 +1,5 @@
 <% layout('/layouts/BoilerPlate') %>
     <h1>YelpCamp</h1>
     <p><i>A Full-Stack Project inspired from Colt Steele's The Web Developer Bootcamp on Udemy.</i></p>
-    <p>Check out our new campgrounds at <button><a href="/campgrounds"><b>/campgrounds</b></a></button></p>
+    <p>Check out our new campgrounds at
+        <a href="/campgrounds" class="btn btn-success btn-sm"><b>/campgrounds</b></a>
