--- a/views/PageNotFound.ejs
+++ b/views/PageNotFound.ejs
@@ -1,4 +1,4 @@
 <% layout('/layouts/BoilerPlate') %>
     <h1>Page Not Found</h1>
     <p>I don't know that path.</p>
-    <button><a href="/campgrounds"><b>Go Back</b></a></button>
+    <a href="/campgrounds" class="btn btn-secondary btn-sm">Go Back</a>
