--- a/views/campgrounds/New.ejs
+++ b/views/campgrounds/New.ejs
@@ -1,24 +1,53 @@
 <% layout('/layouts/BoilerPlate') %>
-    <h1>Create a new campground</h1>
-    <p>
-        <%= error %>
-    </p>
-    <p><span style="color: red;">* Mandatory Fields</span></p>
-    <form action="/campgrounds" method="post">
-        <label for="title">Enter Campground Title<span style="color: red;">*</span> : </label>
-        <input type="text" name="campgroundFromForm[title]" id="title" placeholder="Enter Campground title"
-            required><br><br>
-        <label for="price">Enter Campground Price<span style="color: red;">*</span> : </label>
-        <input type="text" name="campgroundFromForm[price]" id="price" placeholder="Enter campground price"
-            required><br><br>
-        <label for="location">Enter Campground Location<span style="color: red;">*</span> : </label>
-        <input type="text" name="campgroundFromForm[location]" id="location" placeholder="Enter campground location"
-            required><br><br>
-        <label for="description">Enter Campground Description (Optional) : </label>
-        <input type="text" name="campgroundFromForm[description]" id="description"
-            placeholder="Enter campground description"><br><br>
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
-    </form>
-    <br>
-    <button><a href="/campgrounds"><b>Go Back</b></a></button>
+    <div class="row">
+        <h1 class="text-center">Create a new campground</h1>
+        <% if(error){ %>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <%= error %><button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            </div>
+            <% } %>
+                <div class="col-6 offset-3">
+                    <p style="color: red;" class="mb-2 mt-2">* Mandatory Fields</p>
+                    <form action=" /campgrounds" method="post">
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Enter Campground Title<span
+                                    style="color: red;">*</span> :
+                            </label>
+                            <input type="text" class="form-control" name="campgroundFromForm[title]" id="title"
+                                placeholder="Enter campground title" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="image" class="form-label">Enter Campground Image URL (Optional) : </label>
+                            <input type="text" class="form-control" name="campgroundFromForm[imageURL]" id="image"
+                                placeholder="Enter campground image url">
+                        </div>
+                        <div class="mb-3">
+                            <label for="price" class="form-label">Enter Campground Price<span
+                                    style="color: red;">*</span> :
+                            </label>
+                            <div class="input-group">
+                                <span class="input-group-text">Rupees </span>
+                                <input type="text" class="form-control" name="campgroundFromForm[price]" id="price"
+                                    placeholder="0" required>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="location" class="form-label">Enter Campground Location<span
+                                    style="color: red;">*</span>
+                                :
+                            </label>
+                            <input type="text" class="form-control" name="campgroundFromForm[location]" id="location"
+                                placeholder="Enter campground location" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Enter Campground Description (Optional) :
+                            </label>
+                            <textarea class="form-control" name="campgroundFromForm[description]" id="description"
+                                cols="30" rows="3" placeholder="Enter campground description"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-success btn-sm">Submit</button>
+                        <button type="reset" class="btn btn-danger btn-sm">Reset</button>
+                    </form>
+                    <a href="/campgrounds" class="btn btn-secondary btn-sm mt-3">Go Back</a>
+                </div>
+    </div>
