Validations Update 1.5V (Major Update)

--- a/views/campgrounds/Edit.ejs
+++ b/views/campgrounds/Edit.ejs
@@ -9,7 +9,7 @@
                 <div class="col-6 offset-3">
                     <p style="color: red;" class="mt-2">* Mandatory Fields</p>
                     <form action="/campgrounds?_method=PATCH" method="post" class="needs-validation" novalidate>
-                        <% if(campground.imageURL[0]) { %>
+                        <% if(campground.imageURL) { %>
                             <img src="<%=campground.imageURL%> " alt="Campground Image" class="img-fluid mb-3">
                             <% } %>
                                 <div class="mb-3">
@@ -21,7 +21,7 @@
                                     <label for="title" class="form-label">Campground Title<span
                                             style="color: red;">*</span> :
                                     </label>
-                                    <input type="text" class="form-control" name="title" id="title"
+                                    <input type="text" class="form-control" name="campground[title]" id="title"
                                         placeholder="Enter campground title" value="<%=campground.title%>" required>
                                     <div class="valid-feedback">
                                         Looks good!
@@ -32,9 +32,9 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="imageURL" class="form-label">Campground Image URL (Optional) : </label>
-                                    <input type="text" class="form-control" name="imageURL" id="imageURL"
-                                        placeholder="Enter campground image url" <% if(campground.imageURL[0]) { %>
-                                    value="<%=campground.imageURL[0]%>"<%}%>>
+                                    <input type="text" class="form-control" name="campground[imageURL]" id="imageURL"
+                                        placeholder="Enter campground image url" <% if(campground.imageURL) { %>
+                                    value="<%=campground.imageURL%>"<%}%>>
                                             <div class="valid-feedback">
                                                 Looks good!
                                             </div>
@@ -45,7 +45,7 @@
                                     </label>
                                     <div class="input-group">
                                         <span class="input-group-text">Rupees </span>
-                                        <input type="text" class="form-control" name="price" id="price"
+                                        <input type="text" class="form-control" name="campground[price]" id="price"
                                             placeholder="Enter campground price" value="<%=campground.price%>" required>
                                         <div class="valid-feedback">
                                             Looks good!
@@ -59,7 +59,7 @@
                                     <label for="location" class="form-label">Campground Location<span
                                             style="color: red;">*</span> :
                                     </label>
-                                    <input type="text" class="form-control" name="location" id="location"
+                                    <input type="text" class="form-control" name="campground[location]" id="location"
                                         placeholder="Enter campground location" value="<%=campground.location%>"
                                         required>
                                     <div class="valid-feedback">
@@ -72,8 +72,8 @@
                                 <div class="mb-3">
                                     <label for="description" class="form-label">Campground Description (Optional) :
                                     </label>
-                                    <textarea class="form-control" name="description" id="description" cols="30"
-                                        rows="3"
+                                    <textarea class="form-control" name="campground[description]" id="description"
+                                        cols="30" rows="3"
                                         placeholder="Enter campground description"><% if(campground.description) { %><%=campground.description%><% } %></textarea>
                                     <div class="valid-feedback">
                                         Looks good!
