--- a/views/campgrounds/New.ejs
+++ b/views/campgrounds/New.ejs
@@ -13,7 +13,7 @@
                             <label for="title" class="form-label">Enter Campground Title<span
                                     style="color: red;">*</span> :
                             </label>
-                            <input type="text" class="form-control" name="campgroundFromForm[title]" id="title"
+                            <input type="text" class="form-control" name="campground[title]" id="title"
                                 placeholder="Enter campground title" required>
                             <div class="valid-feedback">
                                 Looks good!
@@ -24,7 +24,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="image" class="form-label">Enter Campground Image URL (Optional) : </label>
-                            <input type="text" class="form-control" name="campgroundFromForm[imageURL]" id="image"
+                            <input type="text" class="form-control" name="campground[imageURL]" id="image"
                                 placeholder="Enter campground image url">
                             <div class="valid-feedback">
                                 Looks good!
@@ -36,7 +36,7 @@
                             </label>
                             <div class="input-group">
                                 <span class="input-group-text">Rupees </span>
-                                <input type="text" class="form-control" name="campgroundFromForm[price]" id="price"
+                                <input type="text" class="form-control" name="campground[price]" id="price"
                                     placeholder="0" required>
                                 <div class="valid-feedback">
                                     Looks good!
@@ -50,7 +50,7 @@
                             <label for="location" class="form-label">Enter Campground Location<span
                                     style="color: red;">*</span> :
                             </label>
-                            <input type="text" class="form-control" name="campgroundFromForm[location]" id="location"
+                            <input type="text" class="form-control" name="campground[location]" id="location"
                                 placeholder="Enter campground location" required>
                             <div class="valid-feedback">
                                 Looks good!
@@ -62,8 +62,8 @@
                         <div class="mb-3">
                             <label for="description" class="form-label">Enter Campground Description (Optional) :
                             </label>
-                            <textarea class="form-control" name="campgroundFromForm[description]" id="description"
-                                cols="30" rows="3" placeholder="Enter campground description"></textarea>
+                            <textarea class="form-control" name="campground[description]" id="description" cols="30"
+                                rows="3" placeholder="Enter campground description"></textarea>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
