--- a/views/campgrounds/Show.ejs
+++ b/views/campgrounds/Show.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-6 offset-3">
             <div class="card">
-                <% if(campground.imageURL[0]) { %>
+                <% if(campground.imageURL) { %>
                     <img src="<%=campground.imageURL%>" alt="Campground Image" class="card-img-top">
                     <% } %>
                         <div class="card-body">
