--- a/views/campgrounds/Index.ejs
+++ b/views/campgrounds/Index.ejs
@@ -8,7 +8,7 @@
             <div class="card mb-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <% if(campground.imageURL[0]) { %>
+                        <% if(campground.imageURL) { %>
                             <img src="<%=campground.imageURL%> " alt="Campground Image" class="img-fluid">
                             <% } %>
                     </div>
